--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
             <li class="bar"><a href="#">.</a></li>
             <li><a href="#">아울렛</a></li>
         </ul>
-        <div class="logo"><img src="images/iloom_logo.png" alt=""></div>
+        <div class="logo"><img src="images/iloom_logo.png" alt="일룸 로고 png"></div>
         <ul class="header_right-menu">
             <li><a href="#">이벤트</a></li>
             <li><a href="#">로그인</a></li>
