--- a/index(1).html
+++ b/index(1).html
@@ -814,7 +814,7 @@
              <li class="bar"><a href="#">.</a></li>
              <li><a href="#">아울렛</a></li>
          </ul>
-         <a href="포트폴리오_일룸_메인 .html"><div class="logo"><img src="images/iloom_logo.png" alt=""></div></a>
+         <a href="포트폴리오_일룸_메인 .html"><div class="logo"><img src="images/iloom_logo.png" alt="일룸 로고 png"></div></a>
          <ul class="header_right-menu">
              <li><a href="#">이벤트</a></li>
              <li><a href="#">로그인</a></li>
