--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             color: black;
         }
         
-        .header{
+        header{
             width: 100%;
             height: 50px;
             background: white;
@@ -1020,12 +1020,12 @@
 <body>
     <div id="wrap">
         
-        <div class="iloom_aside_box">
+        <aside class="iloom_aside_box">
             <button class="aside_top"><i class="fa-solid fa-caret-up"></i></button>
             <div class="as_chatbot"><a class="as_chatbot_btn" href="#">챗봇</a></div>
             <div class="as_review"><a class="as_review_btn" href="#">리뷰</a></div>
         </div>
-    <div class="header">
+    <header>
        <div class="icon_menubar"><i class="fa-solid fa-bars"></i></div>
         <ul class="header_left-menu">
             <li><a href="#">침실</a></li>
@@ -1053,7 +1053,7 @@
         </ul>
         <div class="icon_search"><i class="fa-solid fa-magnifying-glass"></i></div>
         <div class="icon_shoppingbasket"><i class="fa-solid fa-cart-shopping"></i></div>
-    </div>
+    </header>
     <div class="main-swiper">
         <div class="swiper-wrapper">
           <img src="images/iloom4.jpg" alt="따뜻한 느낌의 가구사진">
@@ -1390,8 +1390,9 @@
                </ul>
         </div>
     </div>
+    <main>
     <h4>고객님을 위한 제품 추천</h4>
-    <div class="recommended_product">
+    <section class="recommended_product">
         <div class="product"><img src="images/iloom product1.jpg" alt="로이 5단 다리형 책상 세트 1400폭">
         <p>[일룸] 로이 5단 다리형 책상 세트 1400폭</p>
          <span style="color: #C80A1E;">729,000</span>     
@@ -1412,21 +1413,21 @@
             <p>[일룸] 볼케R(패브릭,잔동)</p>
             <span style="color: #C80A1E;">1,890,000</span>     
         </div>
-    </div>
-    <div id="iloom_img_banners">
+    </section>
+    <section id="iloom_img_banners">
       <img src="images/iloom banner1.jpg" alt="학생방 혜택 이미지 배너">
       <img src="images/iloom banner2.jpg" alt="옷장,드레스룸 추천 이미지 배너">
-    </div>
-    <div id="iloom_img_banners002">
+    </section>
+    <section id="iloom_img_banners002">
         <div class="banner_img"><img src="images/iloom banner3.jpg" alt="이벤트 프로모션 이미지 배너"></div>
         <div class="banner_img"><img src="images/iloom banner4.jpg" alt="일룸 메거진 이미지 배너"></div>
         <div class="banner_img"><img src="images/iloom banner5.jpg" alt="구매 후기 이벤트 이미지 배너"></div>
-    </div>
-    <div class="iloom_article_bnr"><img src="images/iloom bnr logo.png" alt="배너 로고 png">
+    </section>
+    <section class="iloom_article_bnr"><img src="images/iloom bnr logo.png" alt="배너 로고 png">
     <span class="article_txt">일룸으로 달라진 특별한 생활을 만나보세요.</span>
     <div class="seemore">더보기></div>
-    </div>
-    <div class="iloom_reviews">
+    </section>
+    <section class="iloom_reviews">
         <div class="review"><img src="images/iloom_review1.jpg" alt="학생방 리뷰 이미지">
         <div class="pentagram">
            <span class="iloom_review-star"><img src="images/iloomstar.png" alt="별점 png"></span>
@@ -1511,8 +1512,8 @@
                 </div>
              </div>
             </div>
-        </div>
-    <div class="insta-section">
+        </section>
+    <section class="insta-section">
         <div class="insta_inr">
         <div class="insta_title"><img src="images/insta_title.png" alt="인스타그램 타이틀 png"></div>
         <div class="insta_subtitle"><img src="images/insta_title2.png" alt="인스타그램 서브 타이틀 png"></div>
@@ -1524,8 +1525,8 @@
         <a href="https://www.instagram.com/iloom_official/"><div class="iloom_instaphoto"><img src="images/iloom_insta5.jpg" alt="파란 소파 이미지"></div></a>
     </div>
     </div>
-</div>
-    <div class="quickmn_section">
+</section>
+    <section class="quickmn_section">
     <div class="quickmn_title"><img src="images/quick menu_title.png" alt="퀵 메뉴 타이틀 png"></div>
     <div class="map-icon"><i class="fa-solid fa-map fa-3x"></i>
     </div>
@@ -1538,8 +1539,8 @@
         <span class="f15_arial">Refurb</span><br>
         <span class="f17_noto">전시품 안내</span>
     </p>
-</div>
-<div class="notice_section">
+</section>
+<section class="notice_section">
     <div class="notice_title"><img src="images/notice_title.png" alt="노티스 타이틀 png"></div>
     <ul class="notice_list">
         <li>2024년 1월 무이자 할부 안내 <span class="ntcDt01">2023.12.29</span></li>
@@ -1547,7 +1548,8 @@
         <li>2023년 11월 무이자 할부 안내 <span class="ntcDt">2023.11.01</span></li>
         <li>일룸 개인정보 처리방침 개정 사전 안내 <span class="ntcDt04">2023.10.27</span></li>
     </ul>
-</div>
+</section>
+</main>
 <footer>
   <div class="footerinr">
       <div class="footerinr_box">
