--- a/index(1).html
+++ b/index(1).html
@@ -27,7 +27,7 @@
         color: black;
     }
         
-    .header{
+    header{
         width: 100%;
         height: 50px;
         background: white;
@@ -792,12 +792,12 @@
      </script>
 </head>
 <body>
-        <div class="iloom_aside_box">
+        <aside class="iloom_aside_box">
             <button class="aside_top"><i class="fa-solid fa-caret-up"></i></button>
             <div class="as_chatbot"><a class="as_chatbot_btn" href="#">챗봇</a></div>
             <div class="as_review"><a class="as_review_btn" href="#">리뷰</a></div>
         </div>
-    <div class="header">
+    <header>
         <div class="icon_menubar"><i class="fa-solid fa-bars"></i></div>
          <ul class="header_left-menu">
              <li><a href="#">침실</a></li>
@@ -825,7 +825,7 @@
          </ul>
          <div class="icon_search"><i class="fa-solid fa-magnifying-glass"></i></div>
          <div class="icon_shoppingbasket"><i class="fa-solid fa-cart-shopping"></i></div>
-     </div>
+     </header>
      <div id="all_menu_layer_popup">
          <div class="layer_close">x</div>
        <div class="layer_title"><a href="#">침실</a>
@@ -1158,14 +1158,14 @@
     <div class="iloom_closet_main"><img src="images/iloom_closet_main.jpg" alt="옷장과 의자가 있는 서브 메인 이미지">
     <h2 class="closet_main_h2">CLOSET</h2>
 </div>
-<section>
+<main>
 <div class="tct_noto">
     옷장
 </div>
-<div class="category_list">
+<section class="category_list">
     <dt>품목</dt>
     <a class="category_a" href="#">옷장/붙박이장</a>
-</div>
+</section>
 <ul class="h60">
     <li><span class="hits">인기순</span></li>
     <li><span class="newer">신상품순</span></li>
@@ -1256,7 +1256,7 @@
         </li>
     </ul>
     <div class="page"><a href="#">1</a></div>
-</section>
+</main>
     <footer>
         <div class="footerinr">
             <div class="footerinr_box">
