--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
             <button class="aside_top"><i class="fa-solid fa-caret-up"></i></button>
             <div class="as_chatbot"><a class="as_chatbot_btn" href="#">챗봇</a></div>
             <div class="as_review"><a class="as_review_btn" href="#">리뷰</a></div>
-        </div>
+        </aisde>
     <header>
        <div class="icon_menubar"><i class="fa-solid fa-bars"></i></div>
         <ul class="header_left-menu">
